updated window controls to use symbolic icons, fixed icon alignment, allowed window controls to take a boolean argument of the window maximization state.

--- a/scss/UI/winControls.scss
+++ b/scss/UI/winControls.scss
@@ -3,6 +3,15 @@
 /*todo: update import paths based on a config file*/
 @import "../themes/Default/main.scss"
 
+.winControl {
+  background-color: $btn_bg;
+}
+
+.winControl>.icon {
+  background-color: transparent;
+  margin: 2px;
+}
+
 .winControl:hover {
   background-color: $btn_bg_hov;
 }
